Lab/P5/ws5/inicio.vsc/src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

	import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		LITENT=39, LITREAL=40, LITCHAR=41, IDENT=42, BLOCK_COMMENT=43, LINE_COMMENT=44, 
		WS=45;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_defVariable = 3, 
		RULE_campos = 4, RULE_campo = 5, RULE_funcion = 6, RULE_variables = 7, 
		RULE_sentencias = 8, RULE_sentencia = 9, RULE_expresiones = 10, RULE_parametros = 11, 
		RULE_parametro = 12, RULE_expresion = 13, RULE_tipo = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "defVariable", "campos", "campo", 
			"funcion", "variables", "sentencias", "sentencia", "expresiones", "parametros", 
			"parametro", "expresion", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "';'", "'var'", "':'", "'('", "')'", 
			"'='", "'printsp'", "'print'", "'println'", "'read'", "'if'", "'else'", 
			"'while'", "'return'", "','", "'<'", "'>'", "'['", "']'", "'.'", "'!'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'>='", "'<='", "'=='", "'!='", "'&&'", 
			"'||'", "'int'", "'float'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "LITENT", "LITREAL", "LITCHAR", "IDENT", "BLOCK_COMMENT", 
			"LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((StartContext)_localctx).definiciones = definiciones();
			setState(31);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definiciones.lista); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definicion> lista = new ArrayList<Definicion>();
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << IDENT))) != 0)) {
				{
				{
				setState(34);
				((DefinicionesContext)_localctx).definicion = definicion();
				 _localctx.lista.add(((DefinicionesContext)_localctx).definicion.ast);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definicion ast;
		public DefVariableContext defVariable;
		public Token IDENT;
		public CamposContext campos;
		public FuncionContext funcion;
		public DefVariableContext defVariable() {
			return getRuleContext(DefVariableContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public CamposContext campos() {
			return getRuleContext(CamposContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((DefinicionContext)_localctx).defVariable = defVariable();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).defVariable.ast; 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(T__0);
				setState(46);
				((DefinicionContext)_localctx).IDENT = match(IDENT);
				setState(47);
				match(T__1);
				setState(48);
				((DefinicionContext)_localctx).campos = campos();
				setState(49);
				match(T__2);
				setState(50);
				match(T__3);
				 ((DefinicionContext)_localctx).ast =  new DefStruct(((DefinicionContext)_localctx).IDENT, ((DefinicionContext)_localctx).campos.lista); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				((DefinicionContext)_localctx).funcion = funcion();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).funcion.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVariableContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVariable; }
	}

	public final DefVariableContext defVariable() throws RecognitionException {
		DefVariableContext _localctx = new DefVariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__4);
			setState(59);
			((DefVariableContext)_localctx).IDENT = match(IDENT);
			setState(60);
			match(T__5);
			setState(61);
			((DefVariableContext)_localctx).tipo = tipo();
			setState(62);
			match(T__3);
			 ((DefVariableContext)_localctx).ast =  new DefVariable(((DefVariableContext)_localctx).tipo.ast, ((DefVariableContext)_localctx).IDENT); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CamposContext extends ParserRuleContext {
		public List<VariableStruct> lista = new ArrayList<VariableStruct>();
		public CampoContext campo;
		public List<CampoContext> campo() {
			return getRuleContexts(CampoContext.class);
		}
		public CampoContext campo(int i) {
			return getRuleContext(CampoContext.class,i);
		}
		public CamposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos; }
	}

	public final CamposContext campos() throws RecognitionException {
		CamposContext _localctx = new CamposContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_campos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(65);
				((CamposContext)_localctx).campo = campo();
				_localctx.lista.add(((CamposContext)_localctx).campo.ast);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CampoContext extends ParserRuleContext {
		public VariableStruct ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo; }
	}

	public final CampoContext campo() throws RecognitionException {
		CampoContext _localctx = new CampoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_campo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			((CampoContext)_localctx).IDENT = match(IDENT);
			setState(74);
			match(T__5);
			setState(75);
			((CampoContext)_localctx).tipo = tipo();
			setState(76);
			match(T__3);
			 ((CampoContext)_localctx).ast =  new VariableStruct(((CampoContext)_localctx).IDENT, ((CampoContext)_localctx).tipo.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public DefFuncion ast;
		public Token IDENT;
		public ParametrosContext parametros;
		public TipoContext tipo;
		public VariablesContext variables;
		public SentenciasContext sentencias;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcion);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((FuncionContext)_localctx).IDENT = match(IDENT);
				setState(80);
				match(T__6);
				setState(81);
				((FuncionContext)_localctx).parametros = parametros();
				setState(82);
				match(T__7);
				setState(83);
				match(T__5);
				setState(84);
				((FuncionContext)_localctx).tipo = tipo();
				setState(85);
				match(T__1);
				setState(86);
				((FuncionContext)_localctx).variables = variables();
				setState(87);
				((FuncionContext)_localctx).sentencias = sentencias();
				setState(88);
				match(T__2);
				 ((FuncionContext)_localctx).ast =  new DefFuncion(((FuncionContext)_localctx).IDENT, ((FuncionContext)_localctx).parametros.lista, ((FuncionContext)_localctx).tipo.ast, ((FuncionContext)_localctx).variables.lista, ((FuncionContext)_localctx).sentencias.lista); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				((FuncionContext)_localctx).IDENT = match(IDENT);
				setState(92);
				match(T__6);
				setState(93);
				((FuncionContext)_localctx).parametros = parametros();
				setState(94);
				match(T__7);
				setState(95);
				match(T__1);
				setState(96);
				((FuncionContext)_localctx).variables = variables();
				setState(97);
				((FuncionContext)_localctx).sentencias = sentencias();
				setState(98);
				match(T__2);
				 ((FuncionContext)_localctx).ast =  new DefFuncion(((FuncionContext)_localctx).IDENT, ((FuncionContext)_localctx).parametros.lista, null, ((FuncionContext)_localctx).variables.lista, ((FuncionContext)_localctx).sentencias.lista); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<DefVariable> lista = new ArrayList<DefVariable>();
		public DefVariableContext defVariable;
		public List<DefVariableContext> defVariable() {
			return getRuleContexts(DefVariableContext.class);
		}
		public DefVariableContext defVariable(int i) {
			return getRuleContext(DefVariableContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(103);
				((VariablesContext)_localctx).defVariable = defVariable();
				 _localctx.lista.add(((VariablesContext)_localctx).defVariable.ast); 
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciasContext extends ParserRuleContext {
		public List<Sentencia> lista = new ArrayList<Sentencia>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__23) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
				{
				{
				setState(111);
				((SentenciasContext)_localctx).sentencia = sentencia();
				 _localctx.lista.add(((SentenciasContext)_localctx).sentencia.ast); 
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentencia ast;
		public ExpresionContext expresion;
		public Token IDENT;
		public ExpresionesContext expresiones;
		public SentenciasContext sentencias;
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ExpresionesContext expresiones() {
			return getRuleContext(ExpresionesContext.class,0);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentencia);
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				expresion(0);
				setState(120);
				match(T__8);
				setState(121);
				expresion(0);
				setState(122);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Asignacion(_localctx.expresion(0), _localctx.expresion(1)); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(T__9);
				setState(126);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(127);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Print(((SentenciaContext)_localctx).expresion.ast, "sp"); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				match(T__10);
				setState(131);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(132);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Print(((SentenciaContext)_localctx).expresion.ast, ""); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				match(T__11);
				setState(136);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(137);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Print(((SentenciaContext)_localctx).expresion.ast, "ln"); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				match(T__12);
				setState(141);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(142);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Read(((SentenciaContext)_localctx).expresion.ast); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				((SentenciaContext)_localctx).IDENT = match(IDENT);
				setState(146);
				match(T__6);
				setState(147);
				((SentenciaContext)_localctx).expresiones = expresiones();
				setState(148);
				match(T__7);
				setState(149);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new FuncionLlamada(((SentenciaContext)_localctx).IDENT, ((SentenciaContext)_localctx).expresiones.lista); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				match(T__13);
				setState(153);
				match(T__6);
				setState(154);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(155);
				match(T__7);
				setState(156);
				match(T__1);
				setState(157);
				((SentenciaContext)_localctx).sentencias = sentencias();
				setState(158);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new If(((SentenciaContext)_localctx).expresion.ast, ((SentenciaContext)_localctx).sentencias.lista, null); 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(161);
				match(T__13);
				setState(162);
				match(T__6);
				setState(163);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(164);
				match(T__7);
				setState(165);
				match(T__1);
				setState(166);
				sentencias();
				setState(167);
				match(T__2);
				setState(168);
				match(T__14);
				setState(169);
				match(T__1);
				setState(170);
				sentencias();
				setState(171);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new If(((SentenciaContext)_localctx).expresion.ast, _localctx.sentencias(0).lista, _localctx.sentencias(1).lista); 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(174);
				match(T__15);
				setState(175);
				match(T__6);
				setState(176);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(177);
				match(T__7);
				setState(178);
				match(T__1);
				setState(179);
				((SentenciaContext)_localctx).sentencias = sentencias();
				setState(180);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new While(((SentenciaContext)_localctx).expresion.ast, ((SentenciaContext)_localctx).sentencias.lista); 
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(183);
				match(T__16);
				setState(184);
				((SentenciaContext)_localctx).expresion = expresion(0);
				setState(185);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Return(((SentenciaContext)_localctx).expresion.ast); 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(188);
				match(T__16);
				setState(189);
				match(T__3);
				 ((SentenciaContext)_localctx).ast =  new Return(null); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionesContext extends ParserRuleContext {
		public List<Expresion> lista = new ArrayList<Expresion>();
		public ExpresionContext expresion;
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public ExpresionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresiones; }
	}

	public final ExpresionesContext expresiones() throws RecognitionException {
		ExpresionesContext _localctx = new ExpresionesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expresiones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__18) | (1L << T__23) | (1L << LITENT) | (1L << LITREAL) | (1L << LITCHAR) | (1L << IDENT))) != 0)) {
				{
				{
				setState(193);
				((ExpresionesContext)_localctx).expresion = expresion(0);
				 _localctx.lista.add(((ExpresionesContext)_localctx).expresion.ast); 
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(195);
					match(T__17);
					setState(196);
					((ExpresionesContext)_localctx).expresion = expresion(0);
					 _localctx.lista.add(((ExpresionesContext)_localctx).expresion.ast); 
					}
					}
					setState(203);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<Parametros> lista = new ArrayList<Parametros>();
		public ParametroContext parametro;
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}
